# geokit

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  _pkgdown.yml  authors.html  configure  configure.win  index.html  pkgdown.yml  search.json  sitemap.xml
R/: GEOSoft-helper.R  GSEMatrix-helper.R  build_geo_acc_urls.R  build_geo_ftp.R  build_geo_ftp_urls.R  class.R  download.R  download_geo_files.R  geo-.R  geo-meta.R  geo-search.R  geo-show.R  geo-suppl.R  geo.R  geokit-package.R  get-gse-matrix.R  get-soft.R  get_geo.R  get_geo_meta.R  get_geo_suppl.R  gpl2bioc.R  import-standalone-cli.R  list_geo_suppl_and_gse_matrix_file_urls.R  log_transformation.R  multi_dowload.R  parse_geo.R  parse_pdata.R  parsers.R  phenodata.R  search_geo.R  set_char.R  set_pdata.R  show_geo.R  sysdata.rda  urls.R  utils-str.R  utils-tidy-eval.R  utils.R  zzz.R
data-raw/: gpl2bioc.R  gpl2bioc_dt.R  gpl2bioc_dt.rds
man/: AnnotatedDataFrameWithMeta.Rd  GEO-class.Rd  geo.Rd  geo_gtype.Rd  geo_meta.Rd  geo_search.Rd  geo_show.Rd  geo_suppl.Rd  geo_url.Rd  geokit-package.Rd  get_geo.Rd  get_geo_meta.Rd  get_geo_suppl.Rd  log_trans.Rd  parse_file_names.Rd  parse_gsm_list.Rd  parse_pdata.Rd  rgeo-package.Rd  search_geo.Rd  set_char.Rd  set_pdata.Rd  show_geo.Rd
news/: index.html
reference/: geo.html  (+16 more)
src/rust/: Cargo.toml
src/rust/src/: downloader.rs  lib.rs  r.rs
src/rust/src/r/: helper.rs
src/rust/src/resolver/: acc.rs  adb.rs  error.rs  ftp.rs  identifier.rs  mod.rs
(+18 files in other folders)
