[package]
name = 'geokit'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'geokit'

[dependencies]
extendr-api = { version = "0.8.0", features = [ "result_list" ] }
thiserror = '*'
anyhow = '*'
regex = '*'
reqwest = { version = '*', features = ['stream'] }
tokio = "*"
tokio-stream = "*"

[profile.release]
lto = true
codegen-units = 1
